; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bnxt/extr_bnxt_txrx.c_bnxt_isc_txd_flush.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bnxt/extr_bnxt_txrx.c_bnxt_isc_txd_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt_softc = type { %struct.bnxt_ring* }
%struct.bnxt_ring = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i32)* @bnxt_isc_txd_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnxt_isc_txd_flush(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.bnxt_softc*, align 8
  %8 = alloca %struct.bnxt_ring*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.bnxt_softc*
  store %struct.bnxt_softc* %10, %struct.bnxt_softc** %7, align 8
  %11 = load %struct.bnxt_softc*, %struct.bnxt_softc** %7, align 8
  %12 = getelementptr inbounds %struct.bnxt_softc, %struct.bnxt_softc* %11, i32 0, i32 0
  %13 = load %struct.bnxt_ring*, %struct.bnxt_ring** %12, align 8
  %14 = load i64, i64* %5, align 8
  %15 = getelementptr inbounds %struct.bnxt_ring, %struct.bnxt_ring* %13, i64 %14
  store %struct.bnxt_ring* %15, %struct.bnxt_ring** %8, align 8
  %16 = load %struct.bnxt_ring*, %struct.bnxt_ring** %8, align 8
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @BNXT_TX_DB(%struct.bnxt_ring* %16, i32 %17)
  %19 = load %struct.bnxt_ring*, %struct.bnxt_ring** %8, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @BNXT_TX_DB(%struct.bnxt_ring* %19, i32 %20)
  ret void
}

declare dso_local i32 @BNXT_TX_DB(%struct.bnxt_ring*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
